--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/compile",
+            "dest": "/"
+        },
+        {
+            "src": "/(.* )",
             "dest": "/"
         }
     ]
